исправляем утечки памяти, исправлены ошибки компиляции